--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -34,8 +34,8 @@
   /* Sidebar */
   --site-title-color: #717070;
   --site-subtitle-color: #868686;
-  --sidebar-bg: #1e1e1e;
-  --sidebar-border-color: #292929;
+  --sidebar-bg: #1e1e2e; /* Azul escuro ajustado */
+  --sidebar-border-color: #29294a; /* Azul escuro suave */
   --sidebar-muted-color: #868686;
   --sidebar-active-color: rgb(255, 255, 255, 0.95);
   --sidebar-hover-bg: #262626;
