Add sponsor button

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,9 @@
 
     <a class="site-title d-block" href="{{ '/' | relative_url }}">{{ site.title }}</a>
     <p class="site-subtitle fst-italic mb-0">{{ site.tagline }}</p>
+    <div style="margin-top: 5px;">
+      <iframe src="https://github.com/sponsors/pedrobiqua/button" title="Sponsor pedrobiqua" height="32" width="114" style="border: 0; border-radius: 6px;"></iframe>
+    </div>
   </header>
   <!-- .profile-wrapper -->
 
