--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -124,6 +124,14 @@ script_includes:
 
   <div class="content">
     {{ content }}
+    <!-- Sponsor -->
+    <h2 id="sponsor">
+      <span class="me-2">Sponsor</span>
+      <a class="anchor text-muted" href="#sponsor"><i class="fas fa-hashtag"></i></a>
+    </h2>
+    <div align="center">
+      <iframe src="https://github.com/sponsors/pedrobiqua/card" title="Sponsor pedrobiqua" height="225" width="600" style="border: 0;"></iframe>
+    </div>
   </div>
 
   <div class="post-tail-wrapper text-muted">
