--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -127,10 +127,12 @@ script_includes:
     <!-- Sponsor -->
     <h2 id="sponsor">
       <span class="me-2">Sponsor</span>
-      <a class="anchor text-muted" href="#sponsor"><i class="fas fa-hashtag"></i></a>
+      <a class="anchor text-muted" href="#sponsor"></a>
     </h2>
-    <div align="center">
-      <iframe src="https://github.com/sponsors/pedrobiqua/card" title="Sponsor pedrobiqua" height="225" width="600" style="border: 0;"></iframe>
+    <div class="post-tail-bottom" align="center">
+      <iframe src="https://github.com/sponsors/pedrobiqua/card"
+            title="Sponsor pedrobiqua"
+            style="border: 0; width: 100%; height: calc(100vw * 0.675); max-width: 600px; max-height: 338px; align: center"></iframe>
     </div>
   </div>
 
