--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -45,7 +45,7 @@
   --avatar-border-color: white;
 
   /* Substituindo o azul claro */
-  --light-blue: #a0c4ff;
+  --light-blue: #004ac0;
   --sidebar-active-color: var(--light-blue); /* Azul claro para elementos ativos */
 
 
