fixing new features

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,9 @@ refactor: true
   {% endfor %}
 {% endif %}
 
+<h1 class="dynamic-title">
+Blog Posts
+</h1>
 <div id="post-list" class="flex-grow-1 px-xl-1">
   {% for post in posts %}
     <article class="card-wrapper card">
